// Copyright 2011, www.lelewan.com
// All rights reserved
//
// Author: wubenqi<wubenqi@caitong.net>, 2011-05-10
//

// 客户登录认证交互协议数据包

syntax = "proto2";

option optimize_for = CODE_SIZE;

package hammer.message;
option java_package = "hammer.message";

// 登录服务端返回的账号验证信息
// ret_code值
//	为0表示账号正常，hash_key用于密码验算
//	非0时表示账号不存在，hash_key无效
	
message SCAuthChallenge {
	required int32  ret_code = 1; 	    // 返回状态
	optional string hash_key = 2; 	    // ret_code的值为0时才有效
}


