// Copyright 2011, www.lelewan.com
// All rights reserved
//
// Author: wubenqi<wubenqi@caitong.net>, 2012-03-13
//

syntax = "proto2";
option optimize_for = CODE_SIZE;

package hammer.message;
option java_package = "hammer.message";

message SCRetReqResult {
	required uint32 message_type = 1;		// 检查出错信息的消息类型
	required int32  ec = 2;					// 出错代码，如果出错才会发送给客户端，值为ErrorCode
	optional string error_string = 3;		// 出错描述
}
